--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/core": "^6.12.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.1.0",
+    "@adonisjs/mail": "^9.2.2",
     "@vinejs/vine": "^2.1.0",
     "luxon": "^3.4.4",
     "pg": "^8.12.0",
